# docker-warp-connect

./: .gitignore  Cargo.toml  README.md  config.toml.example  docker-network-warp.service
.cargo/: config.toml
.devcontainer/: devcontainer.json
.kiro/specs/docker-network-warp/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: error.rs  lib.rs  main.rs
src/config/: cli.rs  env.rs  mod.rs  toml.rs
src/docker/: classifier.rs  events.rs  mod.rs
src/network/: discovery.rs  mod.rs  namespace.rs
src/routing/: manager.rs  mod.rs  rules.rs
