[package]
name = "docker-network-warp"
version = "0.1.0"
edition = "2021"
description = "Automatic Docker container network routing manager"
authors = ["Docker Network Warp Team"]
license = "MIT"
repository = "https://github.com/example/docker-network-warp"

[dependencies]
bollard = "0.16"
rtnetlink = "0.14"
netns-rs = "0.1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnetwork = "0.20"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
