[package]
name = "docker-network-warp"
version = "0.1.0"
edition = "2021"
description = "Automatic Docker container network routing manager"
authors = ["Docker Network Warp Team"]
license = "MIT"
repository = "https://github.com/example/docker-network-warp"

[dependencies]
bollard = "0.19"
rtnetlink = "0.18"
netns-rs = "0.1"
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ipnetwork = "0.21"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.23"
defer = "0.2.1"
